--- a/ProductCatalogAPI/ProductCatalogAPI.csproj
+++ b/ProductCatalogAPI/ProductCatalogAPI.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>8e19867d-c743-4d2a-a5e4-4c05512caa37</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
