--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       CatalogUrl: http://catalog
+      IdentityUrl: http://192.168.1.30:7800
+      CallBackUrl: http://localhost:7500
     ports:
       - "7500:80"
     container_name: webshop
@@ -42,6 +44,7 @@ services:
       - frontend
     depends_on:
       - catalog
+      - tokenserver
 
   tokenserver:
     build:
