--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,25 @@ services:
       - backend
     depends_on:
       - mssqlserver
+
+  cart:
+    image: jewels/cartapi
+    build:
+      context: .\CartApi
+      dockerfile: Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      ConnectionString: basket.data
+      IdentityUrl: http://192.168.1.30:7800
+    ports:
+      - "7010:80"
+    container_name: jewelscartapi
+    networks:
+      - frontend
+      - backend
+    depends_on:
+      - tokenserver
+      - basket.data
       
   webmvc:
     image: jewels/webmvc
@@ -82,5 +101,13 @@ services:
     ports:
       - "1449:1433"
     container_name: jewelstokensqlserver
+    networks:
+      - backend
+
+  basket.data:
+    image: redis
+    ports:
+      - "7050:6379"
+    container_name: basketdata
     networks:
       - backend
