--- a/TokenServiceApi/appsettings.json
+++ b/TokenServiceApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mssqlserver;Database=TokenServiceDb;User Id=sa;Password=ProductApi(!);"
+    "DefaultConnection": "Server=tokensqlserver;Database=TokenServiceDb;User Id=sa;Password=ProductApi(!);"
   },
   "MvcClient": "http://localhost:5201",
   "BasketApiClient": "http://localhost:5051",
